# counsel-ai

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Career_Assessment_Landscape.xlsx  DIAGNOSIS.md  Dockerfile  FIX_PLAN.md  INITIAL_PROMPT.md  PLAN_V4.md  README.md  alembic.ini  app.py  case_studies.py  counselai.db  counselai.db-shm  counselai.db-wal  counsellor.py  db.py  docker-compose.yml  face_analyzer.py  gemini_proxy_clean.py  gemini_ws_new.py  profile_generator.py  pyproject.toml  realtime_server.py  requirements.txt  run.sh  server.py  test_server.py  transcriber.py  utils.py  voice_analyzer.py
.serena/: project.yml
alembic/: env.py
alembic/versions/: 002_sqlite_models_cleanup.py  003_add_session_report_field.py  eb85a8f3b3bb_initial_core_tables.py
certs/: cert.pem  key.pem
scripts/: playwright_cli.sh  run_e2e.sh
src/counselai/: __init__.py  case_studies.py  logging.py  settings.py
src/counselai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
static/: dashboard.css  report-renderer.js  report.css  tokens.css
static/live/: analysis.js  app.js  live.css  media.js  session.js  state.js
templates/: dashboard.html  index.html  live.html
templates/dashboard/: base.html  case_studies.html  case_study_edit.html  case_study_new.html  counsellor.html  counsellor_session.html  overview.html  school.html  schools.html  student.html  tokens.html
test-reports/: agent2-server-tests.md  agent3-frontend-audit.md  agent4-prompt-tests.md  agent5-analyzer-tests.md  agent6-7-combined.md  codex-agent4-results.md  final-test-results.md
tests/: conftest.py  real_offer.sdp  test_counselai.py  test_counsellor_workbench.py  test_e2e.py  test_playwright_flow.py  test_profile.py  test_session_reliability.py  test_webrtc_real.py
tests/contract/: test_api_schemas.py  test_profile_synthesis.py  test_signal_schemas.py
tests/e2e/: __init__.py  conftest.py  seed_data.py  test_analysis_pipeline.py  test_api.py  test_counsellor_review.py  test_counsellor_workbench.py  test_dashboard.py  test_dashboard_overview.py  test_error_handling.py  test_live_session.py  test_live_session_provider_smoke.py  test_live_session_stubbed.py  test_long_session.py  test_pipeline.py  test_school_dashboard.py  test_session_end_reliability.py  test_session_lifecycle.py  test_signals_e2e.py  test_student_dashboard.py  test_uat.py  (+2 more)
(+86 files in other folders)
